--- a/lilypad_module.json.tmpl
+++ b/lilypad_module.json.tmpl
@@ -12,9 +12,8 @@
         },
         "Docker": {
           "Entrypoint": [
-            "python hello.py "
           ],
-          "Image": "yfantisa/animoids:test"
+          "Image": "yfantisa/animoids:test@sha256:389f61de04d05ab19c0fa833e1c3899bc70ab7c53175b38993e71c22df14896c"
         },
         "Engine": "Docker",
         "Network": {
