--- a/lilypad_module.json.tmpl
+++ b/lilypad_module.json.tmpl
@@ -19,7 +19,7 @@
                 "Params": {
                 "Entrypoint": null,
                 "EnvironmentVariables": [],
-                "Image": "yfantisa/animoids:test@sha256:19593db0cdcbc9e0d5533a7f6265e2901b90843d1ab440fff53379ded133aafd",
+                "Image": "yfantisa/animoids:1.0@sha256:96265b3e0b7d06492d5aecd3ab4f21c125a0cfd83f297b9b810caf1c5c433ad3",
                 "Parameters": [
                 ],
                 "WorkingDirectory": ""
