--- a/lilypad_module.json.tmpl
+++ b/lilypad_module.json.tmpl
@@ -11,14 +11,10 @@
                 "Concurrency": 1
             },
             "Docker": {
-              "Image": "yfantisa/animoids:1.0@sha256:96265b3e0b7d06492d5aecd3ab4f21c125a0cfd83f297b9b810caf1c5c433ad3",
-              "EnvironmentVariables": [
-                "OUTPUT_DIR=/output/"
+              "Image": "yfantisa/animoids:1.0@sha256:9d60ff0bd3b1de8f65ea7e97c66b7a79e4298c54020ce5be195e79cbbed5fbec",
+              "Entrypoint": [
+                "/bin/sh", "-c", "python lilypad_sarsa.py"
               ],
-                "Entrypoint": [
-                "bash", "-c",
-                    "python3 ./app/hello.py"
-                ]
             },
             "Engine": "Docker",
             "Network": {
@@ -37,11 +33,8 @@
             "Resources": {
               "GPU": ""
             },
-             "Verifier": "Noop",
-            "Timeout": 1800,
-            "Wasm": {
-                "EntryModule": {}
-            }
+            "Verifier": "Noop",
+            "Timeout": 1800
         }
     }
 }
