--- a/lilypad_module.json.tmpl
+++ b/lilypad_module.json.tmpl
@@ -12,7 +12,7 @@
             },
             "Docker": {
               "Entrypoint": [
-                "/bin/sh", "-c", "python lilypad_sarsa.py"
+                "/bin/sh", "-c", "python hello.py"
               ],
               "Image": "yfantisa/animoids:1.0@sha256:9d60ff0bd3b1de8f65ea7e97c66b7a79e4298c54020ce5be195e79cbbed5fbec"
             },
