--- a/lilypad_module.json.tmpl
+++ b/lilypad_module.json.tmpl
@@ -11,6 +11,9 @@
                 "Concurrency": 1
             },
             "Docker": {
+              "Entrypoint": [
+                "python hello.py"
+              ],
               "Image": "yfantisa/animoids:1.0@sha256:9d60ff0bd3b1de8f65ea7e97c66b7a79e4298c54020ce5be195e79cbbed5fbec"
             },
             "Engine": "Docker",
