--- a/lilypad_module.json.tmpl
+++ b/lilypad_module.json.tmpl
@@ -12,9 +12,9 @@
             },
             "Docker": {
               "Entrypoint": [
-                "python hello.py"
+                "python3 hello.py"
               ],
-              "Image": "yfantisa/animoids:1.0@sha256:a82a4d75555a2b353cea56c0958bee20f9821832daf9e780fd8fd9b6347b6fa1"
+              "Image": "yfantisa/animoids:latest@sha256:dd2efd780d2a83cc803ff27b23f34757f2db55c295ab182233bac7db0ba9be5f"
             },
             "Engine": "Docker",
             "Network": {
