--- a/lilypad_module.json.tmpl
+++ b/lilypad_module.json.tmpl
@@ -12,7 +12,7 @@
             },
             "Docker": {
               "Entrypoint": [
-               "/bin/sh", "-c", "python hello.py"
+               "/bin/sh", "-c", "python app/hello.py"
               ],
                "EnvironmentVariables": [
                    
