--- a/lilypad_module.json.tmpl
+++ b/lilypad_module.json.tmpl
@@ -17,7 +17,7 @@
                "EnvironmentVariables": [
                    
                 ],
-              "Image": "yfantisa/animoids:latest@sha256:dd2efd780d2a83cc803ff27b23f34757f2db55c295ab182233bac7db0ba9be5f"
+              "Image": "yfantisa/animoids:0.1@sha256:dd2efd780d2a83cc803ff27b23f34757f2db55c295ab182233bac7db0ba9be5f"
             },
             "Engine": "Docker",
             "Network": {
