--- a/lilypad_module.json.tmpl
+++ b/lilypad_module.json.tmpl
@@ -20,7 +20,7 @@
                 "Entrypoint": null,
                 "EnvironmentVariables": [
                 ],
-                "Image": "yfantisa/animoids:0.1@sha256:dd2efd780d2a83cc803ff27b23f34757f2db55c295ab182233bac7db0ba9be5f",
+                "Image": "yfantisa/animoids:latest@sha256:33ad8adcd540f90b8917a2b7574418a3935959458f550f84dc9a86f6baa6eeb1",
                 "Parameters": [
                 ],
                 "WorkingDirectory": ""
